@@ -1,6 +1,7 @@
 Revision history for Spreadsheet-HTML
 
 1.08
+    - removed empty (&nbsp;) from <ol> and <ul> lists
 
 1.07
     - added encoding and empty to list()
